tests/negative/typechecker_bad19.sp
(* Missing bracket on function definiton *)

a: Int ();

a: Int();

main: Int () {

  return 0;
}